--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Fazliddin To'ybozorov</h2>
-                                    <p class="item-intro text-muted1">(navbat to'y)</p>
+                                    <p class="item-intro text-muted1">(navbatdagi to'y)</p>
                                     <div class="container">
                                         <h2 class="mb-3">2025 - yil 11-Oktabr</h2>
                                         <table class="table table-striped table-bordered">
@@ -562,7 +562,7 @@
                                                 <td>-</td>
                                             </tr>
                                             <tr>
-                                                <td>Fazliddin To'ybozorov</td>
+                                                <td>Temur Ibroyimov</td>
                                                 <td>-</td>
                                             </tr>
                                             <tr>
