--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/portfolio/Muhammad.jpg" alt="..." />
-                            <h4>Mizamov Muhammad</h4>
+                            <h4>Muhammad Mizamov</h4>
                             <p class="text-muted1">To'lanmadi!</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-telegram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href=https://instagram.com/muhammad_mizomov" aria-label="Larry Parker Facebook Profile"><i class="fab fa-instagram"></i></a>
