--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                 <div class="row text-center">
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
-                            <i class="fas fa-square fa-stack-2x text-warning"></i>
+<!--                            <i class="fas fa-square fa-stack-2x btn-primary"></i>-->
+                            <i class="fas fa-square fa-stack-2x text-warning1"></i>
                             <i class="fas fa-mobile-alt fa-stack-1x fa-inverse"></i>
 <!--                            <i class="fas fa-circle fa-stack-2x text-primary"></i>-->
 <!--                            <i class="bi bi-telephone-fill fa-stack-1x fa-inverse"></i>-->
@@ -75,7 +76,7 @@
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
-                            <i class="fas fa-square fa-stack-2x text-primary"></i>
+                            <i class="fas fa-square fa-stack-2x text-warning1"></i>
                             <i class="fas fa-camera fa-stack-1x fa-inverse"></i>
 <!--                            <i class="fas fa-circle fa-stack-2x text-primary"></i>-->
 <!--                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>-->
@@ -226,7 +227,6 @@
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-facebook-f"></i></a>
                         </div>
                     </div>
-                </div>
                 <div class="col-lg-4">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="assets/img/portfolio/Nodir.jpg" alt="..." />
@@ -237,7 +237,16 @@
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
-            </div>
+            <div class="col-lg-4">
+                <div class="team-member">
+                    <img class="mx-auto rounded-circle" src="assets/img/portfolio/SardorX.jpg" alt="..." />
+                    <h4>Sardor Xushvaqtov</h4>
+                    <p class="text-muted1">To'lanmadi!</p>
+                    <a class="btn btn-dark btn-social mx-2" href="https://t.me/sardorazimiddin" aria-label="Twitter"><i class="fab fa-telegram"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/sardor_azmiddin" aria-label="Facebook"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="https://Facebook.com/Sardor Xushvaqtov" aria-label="LinkedIn"><i class="fab fa-facebook-f"></i></a>
+                </div>
+              </div>
         </section>
         <!-- About-->
         <section class="page-section" id="about">
@@ -393,7 +402,7 @@
                                             </tr> <tr>
                                                 <td>Sardor Xushvaqtov</td>
                                                 <td>400,000 so'm</td>
-                                            </tr> 
+                                            </tr>
                                             </tbody>
                                         </table>
                                     </div>
@@ -401,7 +410,6 @@
                                     <ul class="list-inline">
                                         <li>
                                             <strong></strong>
-
                                         </li>
                                         <li>
                                             <strong>Topshirilgan:</strong>
