--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/portfolio/Muhammad.jpg" alt="..." />
                             <h4>Muhammad Mizamov</h4>
-                            <p class="text-muted1">To'lanmadi!</p>
+                            <div class="icon-item">
+                                <i class="fas fa-envelope icon"></i>
+                            <p class="text-muted2">To'landi!</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-telegram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href=https://instagram.com/muhammad_mizomov" aria-label="Larry Parker Facebook Profile"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-facebook-f"></i></a>
@@ -143,7 +145,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/portfolio/Ilhom.jpg" alt="..." />
                             <h4>Ilhom Xoliqov</h4>
-                            <p class="text-muted1">To'lanmadi!</p>
+                            <p class="text-muted3" >Bermoqchi emas!</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-telegram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/xoliqov4411" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-facebook-f"></i></a>
@@ -153,7 +155,10 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/portfolio/Elbek.jpg" alt="..." />
                             <h4>Elbek Ergashev</h4>
-                            <p class="text-muted1">To'lanmadi!</p>
+                            <div class="icon-item">
+                                <i class="fas fa-envelope icon"></i>
+                            </div>
+                            <p class="text-muted2">To'landi!</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-telegram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/elbek_ergashev01" aria-label="Larry Parker Facebook Profile"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-facebook-f"></i></a>
@@ -177,7 +182,9 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/portfolio/Shuxrat.jpg" alt="..." />
                             <h4>Shuhrat Muqimov</h4>
-                            <p class="text-muted1">To'lanmadi!</p>
+                            <div class="icon-item">
+                                <i class="fas fa-envelope icon"></i>
+                            <p class="text-muted2">To'landi!</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-telegram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/muqimov_2001" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-facebook-f"></i></a>
@@ -231,7 +238,9 @@
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="assets/img/portfolio/Nodir.jpg" alt="..." />
                         <h4>Nodirbek Xoliqov</h4>
-                        <p class="text-muted1">To'lanmadi!</p>
+                        <div class="icon-item">
+                            <i class="fas fa-envelope icon"></i>
+                        <p class="text-muted2">To'landi!</p>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-telegram"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/nodir_xon_0801" aria-label="Larry Parker Facebook Profile"><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-facebook-f"></i></a>
@@ -555,7 +564,7 @@
                                             </tr>
                                             <tr>
                                                 <td>Mizamov Muhammad</td>
-                                                <td>-</td>
+                                                <td>1,200,000 so'm (10kg)</td>
                                             </tr>
                                             <tr>
                                                 <td>Javohir Rashidov</td>
@@ -567,7 +576,7 @@
                                             </tr>
                                             <tr>
                                                 <td>Elbek Ergashev</td>
-                                                <td>-</td>
+                                                <td>600,000</td>
                                             </tr>
                                             <tr>
                                                 <td>Temur Ibroyimov</td>
@@ -575,7 +584,7 @@
                                             </tr>
                                             <tr>
                                                 <td>Shuhrat Muqimov</td>
-                                                <td>-</td>
+                                                <td>600,000</td>
                                             </tr>
                                             <tr>
                                                 <td>Ravshan Normamatov</td>
@@ -589,7 +598,7 @@
                                                 <td>-</td>
                                             </tr> <tr>
                                                 <td>Nodirbek Xoliqov</td>
-                                                <td>-</td>
+                                                <td>1,240,000(100$)</td>
                                             </tr> <tr>
                                                 <td>Sardor Xushvaqtov</td>
                                                 <td>-</td>
@@ -597,7 +606,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <p> To'y bo'lgan yil vaqtida 5 kg go'sht (- so'm) hisobida berilgan</p>
+                                    <p> To'y bo'lgan yil vaqtida 5 kg go'sht (120,000- so'm) hisobida berilgan</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong></strong>
