--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/portfolio/Muhammad.jpg" alt="..." />
                             <h4>Muhammad Mizamov</h4>
                             <div class="icon-item">
-                                <i class="fas fa-envelope icon"></i>
+                                <i class="fas fa-check-circle icon" style="color: #28a745;"></i>
                             <p class="text-muted2">To'landi!</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-telegram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href=https://instagram.com/muhammad_mizomov" aria-label="Larry Parker Facebook Profile"><i class="fab fa-instagram"></i></a>
@@ -156,7 +156,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/portfolio/Elbek.jpg" alt="..." />
                             <h4>Elbek Ergashev</h4>
                             <div class="icon-item">
-                                <i class="fas fa-envelope icon"></i>
+                                <i class="fas fa-check-circle icon" style="color: #28a745;"></i>
                             </div>
                             <p class="text-muted2">To'landi!</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-telegram"></i></a>
@@ -183,7 +183,8 @@
                             <img class="mx-auto rounded-circle" src="assets/img/portfolio/Shuxrat.jpg" alt="..." />
                             <h4>Shuhrat Muqimov</h4>
                             <div class="icon-item">
-                                <i class="fas fa-envelope icon"></i>
+                                <i class="fas fa-check-circle icon" style="color: #28a745;"></i>
+                            </div>
                             <p class="text-muted2">To'landi!</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-telegram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/muqimov_2001" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-instagram"></i></a>
@@ -239,7 +240,8 @@
                         <img class="mx-auto rounded-circle" src="assets/img/portfolio/Nodir.jpg" alt="..." />
                         <h4>Nodirbek Xoliqov</h4>
                         <div class="icon-item">
-                            <i class="fas fa-envelope icon"></i>
+                            <i class="fas fa-check-circle icon" style="color: #28a745;"></i>
+                        </div>
                         <p class="text-muted2">To'landi!</p>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-telegram"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/nodir_xon_0801" aria-label="Larry Parker Facebook Profile"><i class="fab fa-instagram"></i></a>
