--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/portfolio/Mirjalol.jpg" alt="..." />
                             <h4>Mirjalol Zayniddinov</h4>
-                            <p class="text-muted1">To'lanmadi!</p>
+                            <div class="icon-item">
+                                <i class="fas fa-check-circle icon" style="color: #28a745;"></i>
+                            </div>
+                            <p class="text-muted2">To'landi!</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://t.me/@mirjalol_0777" aria-label="Parveen Anand Telegram Profile"><i class="fab fa-telegram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/zayniddinov_mirjalol" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-facebook-f"></i></a>
@@ -109,7 +112,10 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/portfolio/Jonibek.jpg" alt="..." />
                             <h4>Jonibek Ergashev</h4>
-                            <p class="text-muted1">To'lanmadi!</p>
+                            <div class="icon-item">
+                                <i class="fas fa-check-circle icon" style="color: #28a745;"></i>
+                            </div>
+                            <p class="text-muted2">To'landi!</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-telegram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/_jonibek_1166" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-facebook-f"></i></a>
@@ -374,7 +380,7 @@
                                                 <td>400,000 so'm</td>
                                             </tr>
                                             <tr>
-                                                <td>Mizamov Muhammad</td>
+                                                <td>Muhammad Mizamov</td>
                                                 <td>400,000 so'm</td>
                                             </tr>
                                             <tr>
@@ -469,7 +475,7 @@
                                                 <td>600,000 so'm</td>
                                             </tr>
                                             <tr>
-                                                <td>Mizamov Muhammad</td>
+                                                <td>Muhammad Mizamov </td>
                                                 <td>600,000 so'm</td>
                                             </tr>
                                             <tr>
@@ -558,14 +564,14 @@
                                             <tbody>
                                             <tr>
                                                 <td>Mirjalol Zayniddinov</td>
-                                                <td>-</td>
+                                                <td>600,000 so'm</td>
                                             </tr>
                                             <tr>
                                                 <td>Jonibek Ergashev</td>
-                                                <td>-</td>
+                                                <td>600,000 so'm</td>
                                             </tr>
                                             <tr>
-                                                <td>Mizamov Muhammad</td>
+                                                <td>Muhammad Mizamov </td>
                                                 <td>1,200,000 so'm (10kg)</td>
                                             </tr>
                                             <tr>
@@ -604,6 +610,9 @@
                                             </tr> <tr>
                                                 <td>Sardor Xushvaqtov</td>
                                                 <td>-</td>
+                                            </tr> <tr>
+                                                <td>Jami </td>
+                                                <td>4,840,000</td>
                                             </tr>
                                             </tbody>
                                         </table>
