--- a/index.html
+++ b/index.html
@@ -141,7 +141,10 @@
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             <img class="mx-auto rounded-circle" src="assets/img/portfolio/Temur.jpg" alt="..." />
                             <h4>Temur Ibroyimov</h4>
-                            <p class="text-muted1">To'lanmadi!</p>
+                                <div class="icon-item">
+                                    <i class="fas fa-check-circle icon" style="color: #28a745;"></i>
+                                </div>
+                            <p class="text-muted1">To'landi!</p>
                             <a class="btn btn-dark btn-social mx-2" href="" aria-label="Parveen Anand Telegram Profile"><i class="fab fa-telegram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/temurbek_ibroyimov" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-facebook-f"></i></a>
@@ -588,7 +591,7 @@
                                             </tr>
                                             <tr>
                                                 <td>Temur Ibroyimov</td>
-                                                <td>-</td>
+                                                <td>600,000 so'm</td>
                                             </tr>
                                             <tr>
                                                 <td>Shuhrat Muqimov</td>
@@ -612,7 +615,7 @@
                                                 <td>-</td>
                                             </tr> <tr>
                                                 <td>Jami </td>
-                                                <td>4,840,000</td>
+                                                <td>5,440,000</td>
                                             </tr>
                                             </tbody>
                                         </table>
