--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <div class="icon-item">
                                     <i class="fas fa-check-circle icon" style="color: #28a745;"></i>
                                 </div>
-                            <p class="text-muted1">To'landi!</p>
+                            <p class="text-muted2">To'landi!</p>
                             <a class="btn btn-dark btn-social mx-2" href="" aria-label="Parveen Anand Telegram Profile"><i class="fab fa-telegram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/temurbek_ibroyimov" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-facebook-f"></i></a>
@@ -154,7 +154,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/portfolio/Ilhom.jpg" alt="..." />
                             <h4>Ilhom Xoliqov</h4>
-                            <p class="text-muted3" >Bermoqchi emas!</p>
+                            <p class="text-muted1" >To'lanmadi!</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-telegram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/xoliqov4411" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-facebook-f"></i></a>
