--- a/index.html
+++ b/index.html
@@ -422,11 +422,14 @@
                                             </tr> <tr>
                                                 <td>Sardor Xushvaqtov</td>
                                                 <td>400,000 so'm</td>
+                                            </tr><tr>
+                                                <td>Jami:</td>
+                                                <td>4,400,000 so'm</td>
                                             </tr>
                                             </tbody>
                                         </table>
                                     </div>
-                                    <p> To'y bo'lgan yil vaqtida 5 kg go'sht (80,000 so'm) hisobida berilgan</p>
+                                    <p> To'y bo'lgan yil 5 kg go'sht (80,000 so'm) hisobida berilgan</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong></strong>
@@ -517,11 +520,14 @@
                                             </tr> <tr>
                                                 <td>Sardor Xushvaqtov</td>
                                                 <td>600,000 so'm</td>
+                                            </tr><tr>
+                                                <td>Jami:</td>
+                                                <td>6,300,000 so'm</td>
                                             </tr>
                                             </tbody>
                                         </table>
                                     </div>
-                                    <p> To'y bo'lgan yil vaqtida 5 kg go'sht (120,000 so'm) hisobida berilgan</p>
+                                    <p> To'y bo'lgan yil 5 kg go'sht (120,000 so'm) hisobida berilgan</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong></strong>
@@ -554,7 +560,7 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Fazliddin To'ybozorov</h2>
-                                    <p class="item-intro text-muted1">(navbatdagi to'y)</p>
+                                    <p class="item-intro text-muted2">(Bugun to'y)</p>
                                     <div class="container">
                                         <h2 class="mb-3">2025 - yil 11-Oktabr</h2>
                                         <table class="table table-striped table-bordered">
@@ -587,7 +593,7 @@
                                             </tr>
                                             <tr>
                                                 <td>Elbek Ergashev</td>
-                                                <td>600,000</td>
+                                                <td>600,000 so'm</td>
                                             </tr>
                                             <tr>
                                                 <td>Temur Ibroyimov</td>
@@ -595,7 +601,7 @@
                                             </tr>
                                             <tr>
                                                 <td>Shuhrat Muqimov</td>
-                                                <td>600,000</td>
+                                                <td>600,000 so'm</td>
                                             </tr>
                                             <tr>
                                                 <td>Ravshan Normamatov</td>
@@ -615,12 +621,12 @@
                                                 <td>-</td>
                                             </tr> <tr>
                                                 <td>Jami </td>
-                                                <td>5,440,000</td>
+                                                <td>5,440,000 so'm</td>
                                             </tr>
                                             </tbody>
                                         </table>
                                     </div>
-                                    <p> To'y bo'lgan yil vaqtida 5 kg go'sht (120,000- so'm) hisobida berilgan</p>
+                                    <p> To'y bo'lgan yil 5 kg go'sht (120,000- so'm) hisobida berilgan</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong></strong>
