--- a/index.html
+++ b/index.html
@@ -154,7 +154,10 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/portfolio/Ilhom.jpg" alt="..." />
                             <h4>Ilhom Xoliqov</h4>
-                            <p class="text-muted1" >To'lanmadi!</p>
+                            <div class="icon-item">
+                                <i class="fas fa-check-circle icon" style="color: #28a745;"></i>
+                            </div>
+                            <p class="text-muted2">To'landi!</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-telegram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/xoliqov4411" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-facebook-f"></i></a>
@@ -218,7 +221,10 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/portfolio/Ravshan.jpg" alt="..." />
                             <h4>Ravshan Normamatov</h4>
-                            <p class="text-muted1">To'lanmadi!</p>
+                            <div class="icon-item">
+                                <i class="fas fa-check-circle icon" style="color: #28a745;"></i>
+                            </div>
+                            <p class="text-muted2">To'landi!</p>
                             <a class="btn btn-dark btn-social mx-2" href="" aria-label="Parveen Anand Telegram Profile"><i class="fab fa-telegram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/ravshanjon0828" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-facebook-f"></i></a>
@@ -238,7 +244,10 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/portfolio/Jahongir.jpg" alt="..." />
                             <h4>Jahongir Quvondiqov</h4>
-                            <p class="text-muted1">To'lanmadi!</p>
+                            <div class="icon-item">
+                                <i class="fas fa-check-circle icon" style="color: #28a745;"></i>
+                            </div>
+                            <p class="text-muted2">To'landi!</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-telegram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/jakhongir_17_" aria-label="Larry Parker Facebook Profile"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-facebook-f"></i></a>
@@ -261,7 +270,10 @@
                 <div class="team-member">
                     <img class="mx-auto rounded-circle" src="assets/img/portfolio/SardorX.jpg" alt="..." />
                     <h4>Sardor Xushvaqtov</h4>
-                    <p class="text-muted1">To'lanmadi!</p>
+                    <div class="icon-item">
+                        <i class="fas fa-check-circle icon" style="color: #28a745;"></i>
+                    </div>
+                    <p class="text-muted2">To'landi!</p>
                     <a class="btn btn-dark btn-social mx-2" href="https://t.me/sardorazimiddin" aria-label="Twitter"><i class="fab fa-telegram"></i></a>
                     <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/sardor_azmiddin" aria-label="Facebook"><i class="fab fa-instagram"></i></a>
                     <a class="btn btn-dark btn-social mx-2" href="https://Facebook.com/Sardor Xushvaqtov" aria-label="LinkedIn"><i class="fab fa-facebook-f"></i></a>
@@ -560,7 +572,7 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Fazliddin To'ybozorov</h2>
-                                    <p class="item-intro text-muted2">(Bugun to'y)</p>
+                                    <p class="item-intro text-muted">Oilali</p>
                                     <div class="container">
                                         <h2 class="mb-3">2025 - yil 11-Oktabr</h2>
                                         <table class="table table-striped table-bordered">
@@ -589,7 +601,7 @@
                                             </tr>
                                             <tr>
                                                 <td>Ilhom Xoliqov</td>
-                                                <td>-</td>
+                                                <td>600,000 so'm</td>
                                             </tr>
                                             <tr>
                                                 <td>Elbek Ergashev</td>
@@ -605,23 +617,23 @@
                                             </tr>
                                             <tr>
                                                 <td>Ravshan Normamatov</td>
-                                                <td>-</td>
+                                                <td>600,000 so'm</td>
                                             </tr>
                                             <tr>
                                                 <td>Murodjon Ermamatov</td>
                                                 <td>-</td>
                                             </tr> <tr>
                                                 <td>Jahongir Quvondiqov</td>
-                                                <td>-</td>
+                                                <td>600,000 so'm</td>
                                             </tr> <tr>
                                                 <td>Nodirbek Xoliqov</td>
                                                 <td>1,240,000(100$)</td>
                                             </tr> <tr>
                                                 <td>Sardor Xushvaqtov</td>
-                                                <td>-</td>
+                                                <td>600,000 so'm</td>
                                             </tr> <tr>
                                                 <td>Jami </td>
-                                                <td>5,440,000 so'm</td>
+                                                <td>7,840,000 so'm</td>
                                             </tr>
                                             </tbody>
                                         </table>
